Fixed css for too big fonts

--- a/wwwroot/app.css
+++ b/wwwroot/app.css
@@ -3,10 +3,11 @@
     margin: auto;
     text-align: center;
 }
+
 .function {
     font-family: monospace !important;
     max-width: 100%;
-    font-size: 3vw !important;
+    font-size: clamp(1rem, 3vw, 2rem) !important;
 }
 
 .centered-content {
